# RecLab

./: CMakeLists.txt
include/: reclab_app.h  reclab_config.h  reclab_config.h.in
include/clany/: point_types.h
include/core/: auto_calib.h  bundle_adjust.h  feature_matcher.h  optical_flow_matcher.h  reclab.h  rich_feature_matcher.h
include/utilities/: cam_grabber.h  grabber.h  img_seq_grabber.h  kinect_grabber.h  sensor_grabber.h  video_grabber.h  visualizer.h
src/: CMakeLists.txt  main.cpp  reclab_app.cpp
src/core/: CMakeLists.txt  auto_calib.cpp  bundle_adjust.cpp  init_matcher.cpp  optical_flow_matcher.cpp  reclab.cpp  rich_feature_matcher.cpp
src/utilities/: CMakeLists.txt  init_grabber.cpp  kinect_grabber.cpp
